  considered a quantum leap in the continuing rise of the maturity level
  of the software. (Actually, the change is there just to save some
  disk space and I/O for people who don't want to be involved in Obnam
  development and don't want to have massive log files.)
* The default sizes for the `lru-size` and `upload-queue-size` settings
  have been reduced, to reduce the memory impact of Obnam.

Bug fixes:

* If listing extended attributes for a filesystem that does not support
  them, Obnam no longer crashes, just silently does not backup extended
  attributes. Which aren't there anyway.
* A bug in handling stat lookup errors was fixed. Reported by
  Peter Palfrader. Symptom: `AttributeError: 'exceptions.OSError'
  object has no attribute 'st_ino'` in an error message or log file.
* A bug in a restore crashing when failing to set extended attributes
  on the restored file was fixed. Reported by "S. B.".

Version 1.3, released 2012-12-16
--------------------------------

* When creating files in the backup repository, Obnam tries to avoid NFS
  synchronisation problems by first writing a temporary file and then
  creating a hardlink to the actual filename. This works badly on filesystems
  that do not allow hard links, such as VFAT. If creating the hardlink
  fails, Obnam now further tries to use the `open(2)` system call with
  the `O_EXCL` flag to create the target file. This should allow things
  to work with both NFS and VFAT.
* More detailed progress reporting during the backup.
* Manual page now covers the diff subcommand. Patch by Peter Valdemar Mørch.
* Speed optimisation patch for backing up files in inode numbering order,
  from Christophe Vu-Brugier.
* A setuid or setgid bit is now not restored if Obnam is not used by root
  or the same user as the owner of the restored file.
* Many new settings to control "obnam fsck", mainly to reduce the amount
  of checking being done in order to make it faster. However, fsck is